fix wrong sized timers div

--- a/js/berrytube/css/stweaks.css
+++ b/js/berrytube/css/stweaks.css
@@ -1,7 +1,7 @@
 .st-window-open {
     background-color: rgba(0, 0, 0, 0.6);
     width: 70%;
-    height: calc(100% - 75px);
+    height: calc(100%);
     justify-content: center;
     align-items: center;
     z-index: 3;
@@ -87,10 +87,6 @@ button.st-button:first-letter {
     bottom: 0px;
     height: 100%;
     width: 30%;
-}
-
-.wrapper #dyn_header iframe {
-    height: auto !important;
 }
 
 #chatpane.st-chat #chatbuffer {
